--- a/css/styles.css
+++ b/css/styles.css
@@ -496,7 +496,7 @@ footer {
     ul.header {
         position: fixed;
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background: #2c3e50;
         top: 15vh;
         left: -100%;
@@ -505,7 +505,7 @@ footer {
     }
     ul.header li{
         display: block;
-        margin: 50px 0;
+        margin: 5% 0;
         line-height: 30px;
     }
     ul.header li a{
@@ -520,7 +520,7 @@ footer {
     #check:checked ~ ul{
         left:0;
     }
-    .desactivar {
+    #desactivar {
         display: none;
     }
 
