--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,6 @@
+@import "./variables.scss";
 @import "./mixins.scss";
+@import "./extends.scss";
 @import "./body.scss";
 @import "./header.scss";
 @import "./main__index.scss";
