--- a/css/styles.css
+++ b/css/styles.css
@@ -77,9 +77,7 @@ header {
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    align-content: center;
     grid-area: section1;
     background-color: rgba(0, 0, 0, 0.631); }
     #main__index #main__section1 .main__section1__titulo {
@@ -134,31 +132,18 @@ header {
       font-size: 1.5rem;
       font-family: 'Playfair', serif;
       margin: 5px 8vw 20px 8vw; }
-    #main__index #main__section2 div .main__section2__titulo {
-      font-size: 3rem;
-      font-family: 'Playfair Display', serif;
-      padding-top: 5vh; }
-    #main__index #main__section2 div .main__imagenes {
-      width: 200px;
-      height: 200px; }
-    #main__index #main__section2 div .main__section2__texto {
-      font-size: 1.5rem;
-      font-family: 'Playfair', serif;
-      margin: 5px 8vw 20px 8vw; }
-    #main__index #main__section2 div .main__section2__texto {
-      font-size: 1.5rem;
-      font-family: 'Playfair', serif;
-      margin: 5px 8vw 20px 8vw; }
   #main__index #main__section3 {
     height: auto;
     background-image: url(../assets/images/inicio.jpg);
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: flecha;
     align-items: center;
+    justify-items: center;
     align-content: center;
+    justify-content: cetro;
     text-align: center;
     grid-area: section3;
     z-index: -100; }
@@ -171,7 +156,11 @@ header {
         text-align: center; }
       #main__index #main__section3 .main__section3__fondo .main__section3__2columnas {
         display: flex;
-        justify-content: space-around;
+        flex-direction: columna;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
+        justify-content: entre;
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: 50% 50%;
@@ -254,8 +243,8 @@ header {
       height: 80vh;
       width: 100%;
       background-image: url(../assets/images/Imagenes_habitaciones/habitacion_fondo.jpg);
-      background-position: center;
       background-repeat: no-repeat;
+      background-position: center;
       background-size: cover; }
       #main__habitaciones .main_fondo .habit__section1 .habit__section1__fondo {
         width: inherit;
@@ -284,8 +273,11 @@ header {
         border: 2px solid bisque;
         background-image: linear-gradient(#DBD3D0, #BAC2DB);
         display: flex;
-        justify-content: space-between;
-        align-items: center; }
+        flex-direction: flecha;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
+        justify-content: entre; }
         #main__habitaciones .main_fondo .habit__section .habit__section__fondo .imagen_habit {
           max-width: 100%;
           height: 300px; }
