--- a/scss/main__actividades.scss
+++ b/scss/main__actividades.scss
@@ -6,9 +6,7 @@
         text-align: center;
         height: 40vh;
         background-image: url(../assets/images/Imagenes_actividades/Actividades_panoramica.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        @include backgrounds;
         z-index: -1;
         color: bisque;
         .sombreado {
