--- a/scss/main__habitaciones.scss
+++ b/scss/main__habitaciones.scss
@@ -11,9 +11,7 @@
             height: 80vh;
             width: 100%;
             background-image: url(../assets/images/Imagenes_habitaciones/habitacion_fondo.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            @include backgrounds;
             .habit__section1__fondo {
                 width: inherit;
                 height: 80vh;
@@ -45,9 +43,7 @@
                 color: black;
                 border: 2px solid bisque;
                 background-image: linear-gradient(#DBD3D0, #BAC2DB);
-                display: flex;
-                justify-content: space-between;
-                align-items: center; 
+                @include flexbox (flecha, entre); 
                 .imagen_habit {
                     max-width: 100%;
                     height: 300px;
