--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -12,3 +12,9 @@ $espacios: (
     "centro": center,
     "entre": space-between,
 );
+$titulos: (
+    "mayor": 6rem,
+    "pc": 4.5rem,
+    "tablet": 3rem,
+    "celular": 2.5rem,
+);
