--- a/scss/main__actividades.scss
+++ b/scss/main__actividades.scss
@@ -63,6 +63,7 @@
                     object-fit: cover;
                 }
                 h3 {
+                    font-size: 2rem;
                     position: absolute;
                     bottom: 0;
                     width: 100%;
