--- a/scss/main__restaurante.scss
+++ b/scss/main__restaurante.scss
@@ -23,7 +23,7 @@
                 list-style: none;
                 &:target ul {
                     max-height: 300px;
-                    transition: .3s all ease-in;
+                    transition: .5s all ease-in;
                 }
                 a{
                     display: block;
@@ -46,7 +46,7 @@
                     padding: 0;
                     list-style: none;
                     overflow: hidden;
-                    transition: .3s all ease-in;
+                    transition: .5s all ease-in;
                     
                     li {
                         
@@ -72,6 +72,11 @@
         overflow: hidden;
         position: relative;	
         background-color: #000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
         div {
             display: flex;
             align-items: flex-end;
@@ -86,10 +91,10 @@
             overflow: hidden;
             grid-area: section2;
             opacity: 0;
-            transition: opacity 0.7s;
+            transition: opacity 0.5s;
             &:target {
                 opacity: 1;
-                transition: opacity 0.7s;
+                transition: opacity 0.5s;
             }
             p {
                 height: inherit;
@@ -103,13 +108,12 @@
             }
         }
         
-        @for $i from 1 to 27 {
+        @for $i from 1 to 29 {
             .slider-content:nth-child(#{$i}) {
                 background-size: cover;
                 background-position: center;
                 background-image: url('../assets/images/Imagenes_restaurante/slide#{$i}.jpg');
             }
         }
-    }
-    
+    } 
 }
