--- a/scss/mediaqueries.scss
+++ b/scss/mediaqueries.scss
@@ -28,8 +28,8 @@
         }
         #main__section3 {
             .main__section3__fondo {
-                .main__section3__2columnas__subtitulo {
-                    font-size: 2.5rem;
+                .main__section3__2columnas__titulo {
+                    font-size: 4rem;
                     padding-top: 30px;
                 }
                 .main_imagenes {
@@ -103,7 +103,7 @@
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 790px) {
     #main__index {
         #main__section3 {
             .main__section3__fondo {
@@ -120,6 +120,19 @@
                 }
             }
         }
+    }
+    #main__restaurante {
+        height: auto;
+        grid-template-columns: auto;
+        grid-row: 0.8 1.5fr;
+        grid-template-areas: "section1" "section2";
+        #slider-container{
+            height: 60vh;
+            justify-content: start;
+            h1 {
+                margin-top: 25px;
+            }
+          }
     }
     footer {
         font-size: 1rem;
@@ -179,9 +192,160 @@
         nav {
             .enlace {
                 .logo {
-                    margin-right: 50px;
+                    padding: 0;
                 }
             }
         }
+    }
+    #main__index {
+        #main__section1 {
+            .main__section1__titulo{
+                font-size: 2rem;
+                margin: 4px;
+            }
+            .main__section1__eslogan {
+                font-size: 1rem;
+                margin: 2px;
+            }
+            .main__section1__reserva{
+                font-size: 1.2rem;
+                margin: 4px;
+            }
+        }
+        #main__section2 {
+                .main__section2__titulo {
+                    font-size: 2rem;
+                }
+                .main__imagenes {
+                    width: 150px;
+                    height: 150px;
+                }
+                .main__section2__texto {
+                    font-size: 1rem;    
+                    margin: 0;
+                }
+        }
+        #main__section3 {
+            .main__section3__fondo {
+                background-color: rgba(0, 0, 0, 0.850);
+                .main__section3__2columnas__titulo {
+                    font-size: 2rem;
+                }
+                .main__section3__2columnas {
+                    .main__section3__2columnas__ubicacion {
+                        .main__section3__2columnas__subtitulo {
+                            font-size: 2rem;
+                        }
+                        .main__imagenes {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        .main__section3__texto__columnas{
+                            font-size: 1.2rem;
+                        }
+                    }
+                    .main__section3__2columnas__servicio {
+                        .main__section3__2columnas__subtitulo {
+                            font-size: 2rem;
+                        }
+                        .main__imagenes {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        .main__section3__texto__columnas{
+                            font-size: 1.2rem;
+                        } 
+                    }
+                    .main__section3__2columnas__garantia {
+                        .main__section3__2columnas__subtitulo {
+                            font-size: 2rem;
+                        }
+                        .main__imagenes {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        .main__section3__texto__columnas{
+                            font-size: 1.2rem;
+                        }
+                    }
+                    .main__section3__2columnas__precio {
+                        .main__section3__2columnas__subtitulo {
+                            font-size: 2rem;
+                        }
+                        .main__imagenes {
+                            height: 150px;
+                            width: 150px;
+                        }
+                        .main__section3__texto__columnas{
+                            font-size: 1.2rem;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    #main__habitaciones {
+        .main_fondo {
+            .habit__section1 {
+                .habit__section1__fondo {
+                    .habit__main__section1__titulo {
+                        font-size: 1.7rem;
+                        letter-spacing: 2vw;
+                        margin: 10px;
+                    }
+                    .habit__main__section__descripcion{
+                        font-size: 1rem;
+                        margin: 0;
+                        padding: 0;
+                    }
+                }
+            }
+            .habit__section {
+                margin: 2%;
+                .habit__main__subtitulo {
+                    font-size: 2rem;
+                    text-align: center;
+                }
+                .habit__section__fondo {
+                    border: 2px solid bisque;
+                    color: black;
+                    margin-left: 10px;
+                    margin-right: 10px;
+                    .imagen_habit {
+                        max-width: 100%;
+                        height: 200px;
+                    }
+                    .main__section__texto {
+                        margin-left: 15px;
+                        margin-right: 15px;
+                        font-size: 1.1rem;
+                    }
+                }
+            }
+        }
+        a {
+            display: flex;
+            justify-content: center;
+            font-size: 1.5rem;
+        }
+    }
+    #main__act {
+
+        #section1__descripcion {
+            .sombreado {
+                .titulo__act {
+                    font-size: 2rem; 
+                }
+                .slogan__act {
+                    font-size: 1rem;
+                    margin: 10px;
+                }
+            }
+        }
+    }
+    footer {
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 1rem;   
     }
 }
